# request-tracker-tools

./: .gitignore  .gitlint  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  chrome_cookie_extractor.py  cookies_a.py  driving_a.py  driving_b.py  notebook_b.py  pyproject.toml  rt.hgsc.bcm.edu.pem  submit.py
.github/: copilot-instructions.md
docs/: copilot-2025-07-24-a.md  rt-rest-1-snapshot.html  rt-rest-1-subset.md
notebooks/: notebook_a.py  notebook_b.py  submit.py
schema/: SCHEMA_VALIDATION.md  rt_ticket_schema.json
schema/examples/: README.md  genomic_batch_submission.json  olink_data_transfer.json  rna_seq_multi_batch.json
src/rt_processor/: __init__.py  cli.py  session.py  utils.py
src/rt_tools/: __init__.py  cli.py  downloader.py  parser.py  session.py  ticket_analyzer.py  utils.py
tests/: __init__.py  conftest.py  test_downloader.py  test_downloader_e2e.py  test_downloader_integration.py  test_dump_ticket_e2e.py  test_dump_ticket_integration.py  test_integration_example.py  test_parse_rt_response.py  test_parser.py  test_status.py  test_ticket_downloader.py
tests/fixtures/rt37525_sanitized/: attachments.txt  history.txt  metadata.txt
tests/fixtures/rt37525_sanitized/1489286/: message.txt  n1483996.html  n1483997.tsv  n1483997.xlsx
tests/fixtures/rt37525_sanitized/1489289/: message.txt
tests/fixtures/rt37525_sanitized/1489291/: message.txt
tests/fixtures/rt37525_sanitized/1489982/: message.txt  n1484849.html
tests/fixtures/rt37525_sanitized/1489984/: message.txt
tests/fixtures/rt37525_sanitized/1490011/: message.txt  n1484885.html
tests/fixtures/rt37525_sanitized/1490538/: message.txt  n1485209.html
tests/fixtures/rt37525_sanitized/1490742/: message.txt  n1485420.html
tests/fixtures/rt_ticket_data/: README.md
