[project]
name = "rt-tools"
version = "0.0.0+dev"
description = "RT Tools package for interacting with RT (Request Tracker) systems"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.5",
]
optional = [
    "anthropic>=0.60.0",
    "marimo>=0.14.13",
]

[project.scripts]
dump-ticket = "rt_tools.cli:dump_ticket"
dump-url = "rt_tools.cli:dump_url"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
