[project]
name = "rt-tools"
version = "0.0.0+dev"
description = "RT Tools package for interacting with RT (Request Tracker) systems"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.4",
    "openpyxl>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.5",
]
optional = [
    "anthropic>=0.60.0",
    "marimo>=0.14.13",
]

[project.scripts]
download-ticket = "rt_tools.cli:download_ticket_cli"
dump-ticket = "rt_tools.cli:dump_ticket"
dump-rest = "rt_tools.cli:dump_rest"
dump-url = "rt_tools.cli:dump_url"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
required-version = ">=0.12.8,<0.12.9"
src = ["src", "tests"]
target-version = "py313"

[tool.ruff.lint]
select = [
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "E",  # pycodestyle errors
    "F",  # Pyflakes
    "I",  # isort
    "UP", # pyupgrade
    "W",  # pycodestyle warnings
]
